Merged changes from upstream repository as preparation for release 4.2.0.