@@ -1,21 +1,10 @@
 package de.emir.tuml.ucore.runtime.pointer;
 
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.List;
+import de.emir.tuml.ucore.runtime.*;
+import de.emir.tuml.ucore.runtime.utils.*;
 
-import de.emir.tuml.ucore.runtime.IDisposable;
-import de.emir.tuml.ucore.runtime.ITreeValueChangeListener;
-import de.emir.tuml.ucore.runtime.IValueChangeListener;
-import de.emir.tuml.ucore.runtime.Notification;
-import de.emir.tuml.ucore.runtime.NotificationType;
-import de.emir.tuml.ucore.runtime.UObject;
-import de.emir.tuml.ucore.runtime.UStructuralFeature;
-import de.emir.tuml.ucore.runtime.utils.FeaturePointer;
-import de.emir.tuml.ucore.runtime.utils.ObjectPointer;
-import de.emir.tuml.ucore.runtime.utils.Pointer;
-import de.emir.tuml.ucore.runtime.utils.PointerChain;
-import de.emir.tuml.ucore.runtime.utils.TypePointer;
+import java.util.ArrayList;
+import java.util.List;
 
 
 
@@ -141,13 +130,11 @@ public class PointerObserver implements IDisposable{
 			if (oldValue instanceof UObject) {
 				if (mNext != null)
 					mNext.dispose();
-				//System.out.println();
 			}
 			Object newValue = notification.getNewValue();
-			if (newValue != null && newValue instanceof UObject) {
+			if (newValue instanceof UObject) {
 				if (mNext != null)
 					mNext.register((UObject)newValue);
-				//System.out.println();
 			}
 			forwardNotification(notification);
 		}
@@ -171,7 +158,7 @@ public class PointerObserver implements IDisposable{
 	}
 	
 	
-	final UObject										mRoot; //TODO: not needed after first registration but nice for debugging
+	final UObject										mRoot; //not needed after first registration but nice for debugging
 	final AbstractPointerObserverListener				mDelegate;
 	final ArrayList<IPointerObserverListener>			mListener = new ArrayList<>();
 	
@@ -185,8 +172,8 @@ public class PointerObserver implements IDisposable{
 		//to re-register the tree listener. 
 		//on the other hand, if the listener is a value listener, we do not need to add another abstraction layer but register the delegate
 		//directly. That is why we replace the last (intermediate) listener with the direct delegate, e.g. remove the last
-		if (mDelegate instanceof ValueDelegateListener && mListener.isEmpty() == false) {
-			IntermediateListener last = (IntermediateListener)mListener.remove(mListener.size()-1);
+		if (mDelegate instanceof ValueDelegateListener && !mListener.isEmpty()) {
+			IntermediateListener last = (IntermediateListener)mListener.removeLast();
 			mDelegate.changeFeatureAndIndex(last.mFeature, last.mListIndex);
 		}
 		mListener.add(mDelegate);
@@ -200,27 +187,30 @@ public class PointerObserver implements IDisposable{
 	
 	UObject getPointerList(Pointer ptr, List<IPointerObserverListener> listener){
 		while(ptr != null) {
-			if (ptr instanceof TypePointer) {
-				throw new UnsupportedOperationException("Observation of TypedPointers is not supported");
-			}
-			if (ptr instanceof ObjectPointer) {
-				return ((ObjectPointer) ptr).getTheInstance();
-			}else if (ptr instanceof FeaturePointer) {
-				FeaturePointer fp = (FeaturePointer)ptr;
-				listener.add(0, new IntermediateListener(fp.getPointedFeature(), fp.getListIndex()));
-				if (ptr instanceof PointerChain)
-					ptr = ((PointerChain) ptr).getParent();
-				else
-					return fp.getTheInstance();
-			}
-		}
+            switch (ptr) {
+                case TypePointer typePointer ->
+                        throw new UnsupportedOperationException("Observation of TypedPointers is not supported");
+                case ObjectPointer objectPointer -> {
+                    return objectPointer.getTheInstance();
+                }
+                case FeaturePointer fp -> {
+                    listener.addFirst(new IntermediateListener(fp.getPointedFeature(), fp.getListIndex()));
+                    if (ptr instanceof PointerChain)
+                        ptr = ((PointerChain) ptr).getParent();
+                    else
+                        return fp.getTheInstance();
+                }
+                default -> {
+                }
+            }
+        }
 		return null;
 	}
 	
 	@Override
 	public void dispose() {
 		if (!mListener.isEmpty()) {
-			mListener.get(0).dispose(); //disposes all children as well
+			mListener.getFirst().dispose(); //disposes all children as well
 			mListener.clear();
 		}
 	}
